--- a/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Edit.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Edit.razor
@@ -81,7 +81,11 @@
             Description = InputModel.Description,
             PublishOnDate = InputModel.PublishOnDate,
             Content = InputModel.Content,
-            ParentPageId = Guid.Parse(InputModel.Parent?.Value)
+            ParentPageId = Guid.Parse(InputModel.Parent?.Value),
+            TempImagePath = InputModel.Image.TempFilePath,
+            ImageAltTag = InputModel.Image.Description,
+            ImageFileName = InputModel.Image.File?.Name ?? string.Empty,
+            ImagePath = InputModel.Image.Path
         };
 
         var result = await Mediator.Send(command, default);
