--- a/src/Churchee.Module.Site/Areas/Site/Pages/Media/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Media/Index.razor
@@ -160,7 +160,7 @@
     {
         await base.OnInitializedAsync();
 
-        imagePrefix = await Mediator.Send(new GetCDNPathQuery());
+        imagePrefix = TenantResolver.GetCDNPrefix();
 
         Directories = await Mediator.Send(new GetMediaFoldersQuery(null));
     }
