--- a/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Create.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Create.razor
@@ -18,7 +18,7 @@
 
 <Form InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm())>
 
-    <RadzenButton ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Button" Click="@(() => OpenContentEditor())">Distraction Free Mode</RadzenButton>
+    <RadzenButton Id="distractionFreeModeBtn" ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Button" Click="@(() => OpenContentEditor())">Distraction Free Mode</RadzenButton>
 
 </Form>
 
