--- a/src/Churchee.Module.Site/Areas/Site/Pages/Redirects/Create.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Redirects/Create.razor
@@ -8,7 +8,7 @@
 @using Churchee.Module.UI.Models
 @using Radzen
 
-<PageName Name="Create Page Type"></PageName>
+<PageName Name="Create Redirect"></PageName>
 
 <Form InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm()) />
 
