--- a/src/Churchee.Module.Events/Areas/Website/Pages/Events/Index.razor
+++ b/src/Churchee.Module.Events/Areas/Website/Pages/Events/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/events"
 @inherits BasePage
 @using Churchee.Module.Events.Features.Queries
+@using Churchee.Module.UI.Components
 @using MediatR
 @using Radzen
 @using Microsoft.AspNetCore.Components.Sections
@@ -22,12 +23,12 @@ else
 }
 
 @code {
-    List<GetListingQueryResponseItem>? events;
+    List<GetListingQueryResponseItem> events;
 
     protected override async Task OnInitializedAsync()
     {
         // Provide default paging parameters (skip, take) and empty sort/filter
         var result = await Mediator.Send(new GetListingQuery(0, int.MaxValue, string.Empty, string.Empty));
-        events = result?.ToList();
+        events = result.Data.ToList();
     }
 }
