--- a/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Create.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Create.razor
@@ -24,7 +24,6 @@
 </Form>
 
 @code {
-    [SupplyParameterFromForm]
     public CreateArticleModel InputModel { get; set; } = new();
 
     public ImageUploadModel ImageUploadModel { get; set; } = new();
@@ -141,6 +140,11 @@
             ds.Close();
         });
 
+    }
+
+    public Create(CreateArticleModel inputModel)
+    {
+        InputModel = inputModel;
     }
 
     private async Task OnImageSubmit(ImageUploadModel model)
