--- a/src/Churchee.Module.Tenancy/Areas/Configuration/Churches/Edit/Edit.razor
+++ b/src/Churchee.Module.Tenancy/Areas/Configuration/Churches/Edit/Edit.razor
@@ -10,12 +10,12 @@
 <Form InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm()) />
 
 @code {
-
     [Parameter]
     public Guid Id { get; set; }
 
+    // Remove the property initializer to avoid BL0008.
     [SupplyParameterFromForm]
-    public EditChurchInputModel InputModel { get; set; } = new();
+    public EditChurchInputModel InputModel { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -27,6 +27,11 @@
         var result = await Mediator.Send(new GetInfoForEditQuery(Id), default);
 
         InputModel = new EditChurchInputModel(result.CharityNumber, result.Domains);
+    }
+
+    public Edit(EditChurchInputModel inputModel)
+    {
+        InputModel = inputModel;
     }
 
     private async Task ValidSubmitForm()
